--- a/footer.html
+++ b/footer.html
@@ -1,2 +1,2 @@
-<br>Version <span title="Official public release no.">0</span>.<span title="Github commit no. (commit of the release)">7</span>.<span title="Uncommited edit no.">0</span><br>
-<a href="http://osu.ppy.sh/u/TheHowl" target="_blank">Originally made by TheHowl</a><br><a href="https://github.com/TheHowl/OsuLevelCalculator" target="_blank">Code Github - feel free to fork, pull and more! &#126;</a>
+<div id="footer"><br>Version <span title="Official public release no.">0</span>.<span title="Github commit no. (commit of the release)">8</span>.<span title="Uncommited edit no.">0</span> - 
+<a href="http://osu.ppy.sh/u/TheHowl" target="_blank">Originally made by TheHowl</a><br><a href="https://github.com/TheHowl/OsuLevelCalculator" target="_blank">Code Github - feel free to fork, pull and more! &#126;</a></div>
