Working hard on API integration

--- a/form-api.html
+++ b/form-api.html
@@ -1,4 +1,4 @@
-<form action="calc.php" method="post">
+<form action="calc-api.php" method="post">
 Nickname: <input type="text" name="nickname" autocomplete="off" placeholder="Ex. WubWoofWolf" class="submit"> 
     Mode: <select name="mode">
 				<option value="0">osu! standard</option>
