--- a/footer.html
+++ b/footer.html
@@ -1,2 +1,4 @@
-<div id="footer"><br>Version <span title="Official public release no.">1</span>.<span title="Github commit no. (commit of the release)">1</span>.<span title="Uncommited edit no.">0</span> - 
+<div id="footer"><br>Version 1.1 - 
 <a href="http://osu.ppy.sh/u/TheHowl" target="_blank">Originally made by TheHowl</a><br><a href="https://github.com/TheHowl/OsuLevelCalculator" target="_blank">Code Github - feel free to fork, pull and more! &#126;</a></div>
+<br><br>
+<div id="qa"><b>Quick access: <a href="index.php">Classic</a> | <a href="w-api.php">With nicknames</a></b></div>
