--- a/form.html
+++ b/form.html
@@ -1,3 +1,3 @@
-<form action="calc.php" method="post">
+<form action="calc-api.php" method="post">
 Level you want to reach: <input type="text" name="leveltoreach" autocomplete="off" placeholder="Ex. 87" class="submit"> <button class="submit" style="background: #F0F0F0" type="submit">Find the score!</button>
 </form>
