Making a more compact code...
As you can see in index.php, next code will be a lot more compact.
A lot.
I still have to finish developing this and the new style, but after
finishing that I think I'm going to delete almost all the files, with an
exception for the font file, the stylev2 file, index.php, footer, form
and README.

--- a/form.html
+++ b/form.html
@@ -1,3 +1,3 @@
-<form action="calc.php" method="post">
-Level you want to reach: <input type="text" name="leveltoreach" autocomplete="off" placeholder="Ex. 87" class="submit"> <button class="submit" style="background: #F0F0F0" type="submit">Find the score!</button>
-</form>
+<form action="index.php" method="post">
+    <span class="txt">insert nickname</span> <input type="text" name="nickname" autocomplete="off" placeholder="Ex. WubWoofWolf" class="submit"><br><span class="txt">mode <input type="radio" name="mode" value="0">osu! standard <input type="radio" name="mode" value="1">Taiko <input type="radio" name="mode" value="2">Catch the Beat  <input type="radio" name="mode" value="3">osu!mania</span><br><span class="txt">and then</span> <button type="submit">submit!</button>
+<input type="hidden" value="api" name="calct"></form>
