Ready maybe? Naah, going to debugging this

--- a/form.html
+++ b/form.html
@@ -1,3 +1,8 @@
 <form action="index.php" method="post">
     <span class="txt">insert nickname</span> <input type="text" name="nickname" autocomplete="off" placeholder="Ex. WubWoofWolf" class="submit"><br><span class="txt">mode <input type="radio" name="mode" value="0">osu! standard <input type="radio" name="mode" value="1">Taiko <input type="radio" name="mode" value="2">Catch the Beat  <input type="radio" name="mode" value="3">osu!mania</span><br><span class="txt">and then</span> <button type="submit">submit!</button>
-<input type="hidden" value="api" name="calct"></form>
+<input type="hidden" value="api" name="calct"></form><br><br><br><br>
+<!-- Classic. -->
+<h1>Classic mode</h1>
+<form action="index.php" method="post">
+<div class="txt">Write the level that you want to reach</div> <input type="text" name="leveltoreach" autocomplete="off" placeholder="Ex. 82" class="submit"> <button type="submit">submit!</button>
+</form>
