--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,2 @@
-<div id="footer"><br>Version 1.1 - 
-<a href="http://osu.ppy.sh/u/TheHowl" target="_blank">Originally made by TheHowl</a><br><a href="https://github.com/TheHowl/OsuLevelCalculator" target="_blank">Code Github - feel free to fork, pull and more! &#126;</a></div>
-<br><br>
-<div id="qa"><b>Quick access: <a href="index.php">Classic</a> | <a href="w-api.php">With nicknames</a></b></div>
+<h1>Footer</h1>
+<div class="txt">version 1.3 <br>Completely made by TheHowl<br> all the info you need about this can be found in the topic (link on the top of the page)</div>
