Little form translation fix

--- a/form.html
+++ b/form.html
@@ -6,5 +6,5 @@
 <!-- Classic. -->
 <h1 id="classicmode"><? echo $olclang["cl-md"]; ?></h1>
 <form action="index.php" method="get">
-<div class="txt"><? echo $olclang["cl-tt"] ?> <input type="text" name="leveltoreach" autocomplete="off" placeholder="Ex. 82" class="submit"> <input type="hidden" value="cl" name="calct"> <button type="submit"><? echo $olclang["submit"]; ?></button></div> 
+<div class="txt"><? echo $olclang["cl-tt"] ?> <input type="text" name="leveltoreach" autocomplete="off" placeholder="<? echo $olclang["example"] ?> 82" class="submit"> <input type="hidden" value="cl" name="calct"> <button type="submit"><? echo $olclang["submit"]; ?></button></div> 
 </form>
