Translation credits(GNP and DSM please translate)

--- a/footer.html
+++ b/footer.html
@@ -1,2 +1,2 @@
 <h1><?php echo $olclang["footer-ttl"]; ?></h1>
-<div class="txt"><?php echo $olclang["footer"]; ?></div>
+<div class="txt"><?php echo $olclang["footer"]; echo $trcr; ?></div>
