--- a/form.html
+++ b/form.html
@@ -1,10 +1,10 @@
 <form action="index.php" method="get">
-    <span class="txt"><?php echo $olclang["insnick"]; ?></span> <input type="text" name="nickname" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> WubWoofWolf" class="submit"><br>
+    <span class="txt"><?php echo $olclang["insnick"]; ?></span> <input type="text" name="nickname" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> WubWoofWolf" class="submit api"><br>
     <span class="txt"><?php echo $olclang["mode"]; ?> <input type="radio" name="mode" value="0">osu! standard <input type="radio" name="mode" value="1">Taiko <input type="radio" name="mode" value="2">Catch the Beat  <input type="radio" name="mode" value="3">osu!mania</span><br>
     <span class="txt"><?php echo $olclang["then"] ?> </span> <input type="hidden" value="api" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button>
 </form><br><br><br><br>
 <!-- Classic. -->
 <h1 id="classicmode"><?php echo $olclang["cl-md"]; ?></h1>
 <form action="index.php" method="get">
-<div class="txt"><?php echo $olclang["cl-tt"] ?> <input type="text" name="leveltoreach" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> 82" class="submit"> <input type="hidden" value="cl" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button></div> 
+<div class="txt"><?php echo $olclang["cl-tt"] ?> <input type="text" name="leveltoreach" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> 82" class="submit cl"> <input type="hidden" value="cl" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button></div> 
 </form>
