Add target level to normal (api) mode #21
Debugging was fucking insane

--- a/form.html
+++ b/form.html
@@ -1,6 +1,7 @@
 <form action="index.php" method="get">
     <span class="txt"><?php echo $olclang["insnick"]; ?></span> <input type="text" name="nickname" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> WubWoofWolf" class="submit api"><br>
     <span class="txt"><?php echo $olclang["mode"]; ?> <input type="radio" name="mode" value="0">osu! standard <input type="radio" name="mode" value="1">Taiko <input type="radio" name="mode" value="2">Catch the Beat  <input type="radio" name="mode" value="3">osu!mania</span><br>
+    <span class="txt"><?php echo $olclang["targ-lv"] ?> <input type="text" name="targlv" autocomplete="off" class="submit cl"></span><br>
     <span class="txt"><?php echo $olclang["then"] ?> </span> <input type="hidden" value="api" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button>
 </form><br><br><br><br>
 <!-- Classic. -->
