Score from a level to another (fixes #19)

--- a/form.html
+++ b/form.html
@@ -7,5 +7,10 @@
 <!-- Classic. -->
 <h1 id="classicmode"><?php echo $olclang["cl-md"]; ?></h1>
 <form action="index.php" method="get">
-<div class="txt"><?php echo $olclang["cl-tt"] ?> <input type="text" name="leveltoreach" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> 82" class="submit cl"> <input type="hidden" value="cl" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button></div> 
+<div class="txt"><?php echo $olclang["cl-tt"]; ?> <input type="text" name="leveltoreach" autocomplete="off" placeholder="<?php echo $olclang["example"]; ?> 82" class="submit cl"> <input type="hidden" value="cl" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button></div> 
+</form><br><br><br><br>
+<!-- s2l -->
+<h1 id="s2lmode"><?php echo $olclang["s2l-md"]; ?></h1>
+<form action="index.php" method="get">
+<div class="txt"><?php echo $olclang["s2l-tx1"]; ?> <input type="text" name="l1" autocomplete="off" placeholder="<?php echo $olclang["example"]; ?> 82" class="submit cl"> <?php echo $olclang["s2l-tx2"]; ?> <input type="text" name="l2" autocomplete="off" placeholder="<?php echo $olclang["example"] ?> 93" class="submit cl"> <input type="hidden" value="s2l" name="calct"> <button type="submit"><?php echo $olclang["submit"]; ?></button></div> 
 </form>
